...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
...
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskActivity"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
...
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="LabelFor" />


    <LinearLayout
        android:id="@+id/buttonAddTaskTaskActivity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bg_green"
        android:elevation="10dp"
...
        android:text="@string/task_description"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTaskDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/editAddTaskStateSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
...
