<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".activity.ViewTaskActivity">


    <TextView
        android:id="@+id/textTaskViewBody"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textTaskViewTitle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:layout_marginBottom="396dp"
        android:text="Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewTaskLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"

            android:text="Longitude" />

        <TextView
            android:id="@+id/viewTaskLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"
            android:text="Latitude" />

        <TextView
            android:id="@+id/viewTaskAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"
            android:text="Address" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTaskViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/textTaskViewBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.312" />


    <ImageView
        android:id="@+id/imageViewViewTaskUploadFile"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textTaskViewStatus"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/textTaskViewStatusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:text="Status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskViewBody" />

    <TextView
        android:id="@+id/textTaskViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="Unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskViewStatusName" />


    <Button
        android:id="@+id/buttonEditTaskViewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@drawable/orange"
        android:elevation="30dp"
        android:text="Edit Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSpeakDescription"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:text="Speak"
        android:textSize="6sp"
        android:backgroundTint="@drawable/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskViewBody" />

    <Button
        android:id="@+id/buttonTranslateDescription"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@drawable/orange"
        android:text="Translate"
        android:textSize="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTaskViewBody" />

</androidx.constraintlayout.widget.ConstraintLayout>