...
        android:layout_weight="1"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHomeUsernameView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeTaskRecycleView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#FFF"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights,UselessParent">

                <LinearLayout
                    android:id="@+id/buttonAddTask"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:background="@drawable/bg_green"
...
