...
    <string name="no_task_name">No task specified!</string>
    <string name="username_with_input">Username: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_state">Unknown!!!</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task_three">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task_title">Add Task</string>
    <string name="remove_tasks">Remove Tasks</string>
    <string name="all_tasks_title">All Tasks</string>
    <string name="username">Username:</string>
    <string name="user_settings">User Settings</string>
...
